# faster-whisper2

./: .gitattributes  README.md  pyproject.toml
scripts/: cuda-env-run.sh  fix-cuda-12.sh
src/faster_whisper2/: __init__.py  transcribe.py  utils.py  vad.py
src/faster_whisper2/assets/: silero_vad_v6.onnx
tests/: test_tokenizer.py  test_transcribe.py  test_utils.py
