[project]
name = "faster-whisper2"
version = "1.2.1"
description = "faster-whisper2"
readme = "README.md"
authors = [
    { name = "lisoboss", email = "37949544+lisoboss@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "av>=18.0",
    "ctranslate2>=4.8",
    "huggingface-hub>=1.22",
    "nvidia-cublas>=13",
    "nvidia-cudnn-cu13>=9",
    "onnxruntime>=1.27",
    "tokenizers>=0.23",
    "tqdm<=4.66",
]

[project.scripts]
faster-whisper2 = "faster_whisper2:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "transformers[torch]>=2.3.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch" }
